Added more to CSV_Analyser notebook.
Added the generated CSV files.

--- a/CSV_analyser.ipynb
+++ b/CSV_analyser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "e56913e4",
    "metadata": {},
    "outputs": [],
@@ -19,18 +19,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "id": "7ed50d5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1382"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_bs4=pd.read_csv(\"./bin/Results_bs4.csv\")\n",
+    "df_bs3=pd.read_csv(\"./bin/Results_bs3.csv\")\n",
+    "df_bs2=pd.read_csv(\"./bin/Results_bs2.csv\")\n",
+    "df_bs1=pd.read_csv(\"./bin/Results_bs1.csv\")\n",
+    "df_bsh=pd.read_csv(\"./bin/Results_bsh.csv\")\n",
     "df=df_bs4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "id": "63bdf5ad",
    "metadata": {},
    "outputs": [],
@@ -42,27 +57,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "d2fe5b97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['CION/ION']=df['CION']/df['ION']"
+    "df['Charge']=df['CION']-df['ION']\n",
+    "df['CION/ION']=df['CION']/df['ION']\n",
+    "df['SOL/ION']=df['SOL']/df['ION']\n",
+    "max_cluster_size=df['ION'].max()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "id": "e5a0271c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster Size->Avg:8 Max:1382\n",
+      "Trivial: 89777.0 Small: 12984.0 Medium: 6692.0 Large: 267186.0 \n",
+      "Trivial%: 23.84 Small%: 3.45 Medium%: 1.78 Large%: 70.94 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7f9231901340>]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['SOL/ION']=df['SOL']/df['ION']"
+    "freq=df['ION'].value_counts(sort=True)\n",
+    "cluster_size_freq=np.zeros(int(no_of_ION)+1)\n",
+    "#freq.columns=['ION_Size','Count']\n",
+    "for i in list(freq.index):\n",
+    "    cluster_size_freq[i]=int(freq.loc[i])\n",
+    "cluster_size_freq=pd.Series(cluster_size_freq)\n",
+    "cluster_size_freq = cluster_size_freq.iloc[1:]\n",
+    "cluster_count_freq=cluster_size_freq*pd.Series(cluster_size_freq.index)\n",
+    "print(\"Cluster Size->Avg:{} Max:{}\".format(round(df['ION'].mean()),df['ION'].max()))\n",
+    "#print(\"Count->Avg:{} Max:{}\".format(cluster_count_freq.mean(),cluster_count_freq.idxmax()))\n",
+    "\n",
+    "trivial=cluster_count_freq[0:4].sum()\n",
+    "small=cluster_count_freq[4:7].sum()\n",
+    "medium=cluster_count_freq[7:13].sum()\n",
+    "large=cluster_count_freq[13:].sum()\n",
+    "trivial_percent=round(trivial/cluster_count_freq.sum()*100,2);\n",
+    "small_percent=round(small/cluster_count_freq.sum()*100,2);\n",
+    "medium_percent=round(medium/cluster_count_freq.sum()*100,2);\n",
+    "large_percent=round(large/cluster_count_freq.sum()*100,2);\n",
+    "\n",
+    "print(\"Trivial: {} Small: {} Medium: {} Large: {} \".format(trivial,small,medium,large))\n",
+    "print(\"Trivial%: {} Small%: {} Medium%: {} Large%: {} \".format(trivial_percent,small_percent,medium_percent,large_percent))\n",
+    "\n",
+    "plt.plot(cluster_size_freq.index,cluster_size_freq)\n",
+    "plt.plot(cluster_count_freq.index,cluster_count_freq)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "04dc2221",
    "metadata": {},
    "outputs": [],
@@ -72,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "811eb9f8",
    "metadata": {},
    "outputs": [
@@ -104,6 +166,7 @@
        "      <th>SOL</th>\n",
        "      <th>CION/ION</th>\n",
        "      <th>SOL/ION</th>\n",
+       "      <th>Charge</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -116,6 +179,7 @@
        "      <td>4461</td>\n",
        "      <td>0.848915</td>\n",
        "      <td>3.336574</td>\n",
+       "      <td>-202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -126,6 +190,7 @@
        "      <td>70</td>\n",
        "      <td>0.777778</td>\n",
        "      <td>3.888889</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -136,6 +201,7 @@
        "      <td>38</td>\n",
        "      <td>0.333333</td>\n",
        "      <td>6.333333</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -146,6 +212,7 @@
        "      <td>32</td>\n",
        "      <td>0.833333</td>\n",
        "      <td>5.333333</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -156,9 +223,11 @@
        "      <td>41</td>\n",
        "      <td>0.500000</td>\n",
        "      <td>5.125000</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -173,9 +242,10 @@
        "      <td>25</td>\n",
        "      <td>9</td>\n",
        "      <td>7</td>\n",
-       "      <td>4</td>\n",
+       "      <td>45</td>\n",
        "      <td>0.777778</td>\n",
-       "      <td>0.444444</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42002</th>\n",
@@ -183,9 +253,10 @@
        "      <td>39</td>\n",
        "      <td>9</td>\n",
        "      <td>5</td>\n",
-       "      <td>7</td>\n",
+       "      <td>51</td>\n",
        "      <td>0.555556</td>\n",
-       "      <td>0.777778</td>\n",
+       "      <td>5.666667</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42018</th>\n",
@@ -193,9 +264,10 @@
        "      <td>55</td>\n",
        "      <td>6</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>28</td>\n",
        "      <td>0.500000</td>\n",
-       "      <td>0.333333</td>\n",
+       "      <td>4.666667</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42077</th>\n",
@@ -203,9 +275,10 @@
        "      <td>114</td>\n",
        "      <td>6</td>\n",
        "      <td>5</td>\n",
-       "      <td>9</td>\n",
+       "      <td>34</td>\n",
        "      <td>0.833333</td>\n",
-       "      <td>1.500000</td>\n",
+       "      <td>5.666667</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42088</th>\n",
@@ -213,33 +286,34 @@
        "      <td>125</td>\n",
        "      <td>7</td>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
+       "      <td>27</td>\n",
        "      <td>0.571429</td>\n",
-       "      <td>0.285714</td>\n",
+       "      <td>3.857143</td>\n",
+       "      <td>-3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1448 rows × 7 columns</p>\n",
+       "<p>1448 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Conf  CNo.   ION  CION   SOL  CION/ION   SOL/ION\n",
-       "0         0     0  1337  1135  4461  0.848915  3.336574\n",
-       "5         0     5    18    14    70  0.777778  3.888889\n",
-       "9         0     9     6     2    38  0.333333  6.333333\n",
-       "10        0    10     6     5    32  0.833333  5.333333\n",
-       "29        0    29     8     4    41  0.500000  5.125000\n",
-       "...     ...   ...   ...   ...   ...       ...       ...\n",
-       "41988   200    25     9     7     4  0.777778  0.444444\n",
-       "42002   200    39     9     5     7  0.555556  0.777778\n",
-       "42018   200    55     6     3     2  0.500000  0.333333\n",
-       "42077   200   114     6     5     9  0.833333  1.500000\n",
-       "42088   200   125     7     4     2  0.571429  0.285714\n",
+       "       Conf  CNo.   ION  CION   SOL  CION/ION   SOL/ION  Charge\n",
+       "0         0     0  1337  1135  4461  0.848915  3.336574    -202\n",
+       "5         0     5    18    14    70  0.777778  3.888889      -4\n",
+       "9         0     9     6     2    38  0.333333  6.333333      -4\n",
+       "10        0    10     6     5    32  0.833333  5.333333      -1\n",
+       "29        0    29     8     4    41  0.500000  5.125000      -4\n",
+       "...     ...   ...   ...   ...   ...       ...       ...     ...\n",
+       "41988   200    25     9     7    45  0.777778  5.000000      -2\n",
+       "42002   200    39     9     5    51  0.555556  5.666667      -4\n",
+       "42018   200    55     6     3    28  0.500000  4.666667      -3\n",
+       "42077   200   114     6     5    34  0.833333  5.666667      -1\n",
+       "42088   200   125     7     4    27  0.571429  3.857143      -3\n",
        "\n",
-       "[1448 rows x 7 columns]"
+       "[1448 rows x 8 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
